<resources>
    <!-- Strings used for menu -->
    <string name="app_name">Lab5</string>
    <string name="settings">Ustawienia</string>
    <string name="info_autor">Informacje o autorze</string>
    <string name="finish_app">Zamknij app</string>
    <string name="snackbar_settings">O klikłeś w ustawienia</string>
    <string name="snackbar_finish_app">Czemu chcesz mnie zamknąć</string>
    <string name="snackbar_info_autor">A autor to JA</string>
    <string name="frag1">Fragment 1</string>
    <string name="frag2">Fragment 2</string>
    <string name="frag3">Fragment 3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Następny</string>
    <string name="previous">Poprzedni</string>

    <string name="hello_first_fragment">Pierwszy fragment</string>
    <string name="hello_second_fragment">Drugi fragment</string>
    <string name="hello_third_fragment">Trzeci fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for FloatingButton -->

</resources>